# illef-workflow

./: Cargo.toml  Makefile  README.md  build.rs  illef-workflow.service
proto/: workflow.proto
src/: lib.rs
src/common/: config.rs  db.rs  types.rs
src/runner/: executor.rs  mod.rs  scheduler.rs  server.rs
src/tui/: app.rs  client.rs  mod.rs  ui.rs
